@@ -1,5 +1,5 @@
 <Type Name="DrawingArea" FullName="Gtk.DrawingArea">
-  <TypeSignature Language="C#" Value="public class DrawingArea : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class DrawingArea : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,19 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The GtkDrawingArea widget is used for creating custom user interface elements.</summary>
+    <remarks>
+     <para>
+      The <see cref="T:Gtk.DrawingArea"/> widget is used for creating custom user interface elements. It's essentially a blank widget; you can draw on <paramref name="widget"/>->window. After creating a drawing area, the application may want to connect to: <para><list type="bullet">
+<item> 1)  Mouse and button press signals to respond to input from the user. (Use <see cref="M:Gtk.Widget.AddEvents"/> to enable events you wish to receive).</item>
+<item> 2)  The <paramref name="realize"/> signal to take any necessary actions when the widget is instantiated on a particular display. (Create GDK resources in response to this signal.)</item>
+<item> 3)  The <paramref name="configure_event"/> signal to take any necessary actions when the widget changes size.</item>
+<item> 4)  The <paramref name="expose_event"/> signal to handle redrawing the contents of the widget.</item></list></para>
+     </para>
+     <para>
+      Expose events are normally delivered when a drawing area first comes onscreen, or when it's covered by another window and then uncovered (exposed). You can also force an expose event by adding to the "damage region" of the drawing area's window; <see cref="M:Gtk.Widget.QueueDrawArea"/> and <see cref="M:Gdk.Window.InvalidateRect"/> are equally good ways to do this. You'll then get an expose event for the invalid region. See also <see cref="M:Gdk.Pixbuf.RenderToDrawable"/> for drawing a <see cref="T:Gdk.Pixbuf"/>.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Widget</BaseTypeName>
@@ -79,9 +90,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.DrawingArea'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor.</summary>
+        <returns>An instance of <see cref="T:Gtk.DrawingArea"/>.</returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
