@@ -1,3 +1,8 @@
+2003-03-05  Duncan Mak  <duncan@ximian.com>
+
+	* en/Gtk/Curve.xml
+	* en/Gtk/DrawingArea.xml: More from Hector.
+
 2003-03-04  Lee Mallabone <mono-docs@fonicmonkey.net>
 
 	* en/Gtk/*Paned.xml: First draft at Paned docs.
